--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "phpmailer/phpmailer": "^6.6"
+        "firebase/php-jwt": "^5.4",
+        "dompdf/dompdf": "^1.0",
+        "phpmailer/phpmailer": "^6.5"
     }
 }
