--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
-        "firebase/php-jwt": "^5.4",
-        "dompdf/dompdf": "^1.0",
-        "phpmailer/phpmailer": "^6.5"
+        "phpmailer/phpmailer": "^6.6",
+        "dompdf/dompdf": "^2.0",
+        "firebase/php-jwt": "^6.3"
     }
 }
